css/styles.css
/*my styles*/

/*animations for loading*/

@-webkit-keyframes fade {
    from { 
        opacity: 0;
    }
    to { 
        opacity: 1;
    }
}

@keyframes fade {
    from { 
        opacity: 0;
    }
    to { 
        opacity: 1;
    }
}

@-webkit-keyframes slideLeft {
    from { 
        -webkit-transform: translateX(600px); 
        transform: translateX(600px);
        opacity: 0;
    }
    to { 
        -webkit-transform: translateX(0); 
        transform: translateX(0);
        opacity: 1;
    }
}

@keyframes slideLeft {
    from { 
        -webkit-transform: translateX(600px); 
        transform: translateX(600px);
        opacity: 0;
    }
    to { 
        -webkit-transform: translateX(0); 
        transform: translateX(0);
        opacity: 1;
    }
}

/*layout*/

.bigwrapper {
    position: absolute;
    width: 100%;
    height: 100%;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
}

.head {
    background-image: url("http://rottingroom.github.io/pitch/img/img2.jpg");
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    -webkit-box-flex: 1;
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    -webkit-animation: fade 6s;
    animation: fade 6s;
}

.sidebar {
    -webkit-box-flex: 0;
    -webkit-flex: 0 0 400px;
    -ms-flex: 0 0 400px;
    flex: 0 0 400px;
    padding: 50px;
    -webkit-animation: slideLeft .7s;
    animation: slideLeft .7s;
}

.sidebar ul {
    margin: 0;
    padding: 0;
}

.sidebar li {
    display: inline-block;
    margin-right: 20px;  
}

#logo {    
    display: block;
    height: 40px;
    border-radius: 250px;
    margin-right: 22px;
    margin-bottom: 15px;
}

svg {
    display: block;
    margin-top: 15px;
    margin-bottom: 15px;
    height: 40px;
    width: 40px;
    fill: #1F788C;
}

button {
    display: inline-block;
    padding: 13px;
    border: 0;
    background: #1F788C;
    color: white;
    border-radius: 4px;
    margin: 0 10px 15px 0;
}

* {
    outline: 0;
}


/*type*/

h1 {
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: normal;
    color: #D9593D;
}

h2 {
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: lighter;
    color: #D9593D;
}

p {
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: lighter;
    color: #999;
}

li {
    list-style-type: none;
    font-family: 'Source Sans Pro', sans-serif;
    color: #1F788C;
}
a:link,
a:visited {
    color: #1F788C;
    font-weight: normal;
    text-decoration: none;
}

a:hover svg,
a:hover #logo,
a:focus svg,
a:focus #logo {
    fill: #D9593D;
    -webkit-transform: scale(1.1);
    transform: scale(1.1);
    -webkit-transition: all .3s;
    transition: all .3s;
}

a:hover button,
a:focus button {
    background-color: #D9593D;

    -webkit-transform: scale(1.1);
    transform: scale(1.1);
    -webkit-transition: all .3s;
    transition: all .3s;
}

.char1, .char9 {
    font-size: 50px;
}

/*media queries*/


@media (max-width: 1300px) {
    
    .bigwrapper {
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
        -webkit-flex-direction: column;
        -ms-flex-direction: column;
        flex-direction: column;
    }
    
    .head {
        -webkit-box-flex: 0;
        -webkit-flex: 0 0 500px;
        -ms-flex: 0 0 500px;
        flex: 0 0 500px;
    }
    
    .sidebar {
        -webkit-align-content: center;
        -ms-flex-line-pack: center;
        align-content: center;
        text-align: center;
        margin: 0 15% 0 15%;
        padding-top: 0;
        -webkit-box-flex: 1;
        -webkit-flex: 1 1 auto;
        -ms-flex: 1 1 auto;
        flex: 1 1 auto
    }

}

@media (max-width: 700px) {

    .sidebar {
        text-align: left;
        margin: 0 5% 0 5%;
    }
    
    button {
        margin-bottom: 10px;
    }
    
}

@media (max-width: 500px) {

    .sidebar {
        text-align: left;
        margin: 0 5% 0 5%;
        padding: 0;
    }
    
    button {
        margin-bottom: 10px;
    }
    
}

